# python-tool-competition-2024-pynguin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python_tool_competition_2024_pynguin/: generator.py
