[tool.poetry]
name = "python-tool-competition-2024-pynguin"
version = "0.1.1"
description = "Python Tool Competition 2024 implementation using Pynguin"
authors = ["Stephan Lukasczyk <stephan@pynguin.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
python-tool-competition-2024 = "^0.1.1"
pynguin = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."python_tool_competition_2024.test_generators"]
pynguin = "python_tool_competition_2024_pynguin.generator:PynguinTestGenerator"
